fix width layout option not working on mobile (test 3)

--- a/global.css
+++ b/global.css
@@ -38,7 +38,7 @@ body {
   font-family: var(--font-family);
   font-size: var(--font-size);
   font-weight: var(--font-weight);
-  width: var(--width);
+  width: var(--user-width, var(--width));
   margin: 0 auto !important; /* Centering */
   display: block;
 }
@@ -247,7 +247,7 @@ button:hover { background-color: rgba(128, 128, 128, 0.5); }
 /* Mobile Adjustments */
 @media only screen and (max-width: 1000px) {
     body {
-        width: 96% !important;
+        --width: 96%;
         margin: 0 auto !important;
     }
 
